--- a/easySign/src/main/resources/application.properties
+++ b/easySign/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=easySign
+spring.datasource.username=xmd
+spring.datasource.password=190828
+spring.datasource.url=jdbc:mysql://localhost:13306/test1?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
